k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprint-kotlin-template-deployment
  labels:
    service: sprint-kotlin-template
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sprint-kotlin-template
  template:
    metadata:
      labels:
        service: sprint-kotlin-template
    spec:
      containers:
        - name: sprint-kotlin-template
          image: csindenis/sprint-kotlin-template:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "300Mi"
              cpu: "300m"
