k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sprint-kotlin-template-service
spec:
  selector:
    service: sprint-kotlin-template
  ports:
    - name: http
      port: 8080
      protocol: TCP
